feat: Declare endpoint in openapi.yml and implements in AbsenceControllerAdapter
